CSS fix for small screens

--- a/root/index.html
+++ b/root/index.html
@@ -62,6 +62,12 @@
 			<img src="images/github.png" />
 		</a>
 	</div>
+	<footer>
+		<div class="container">
+			<a href="mailto:mkara@pinchflat.dev">mkara@pinchflat.dev</a>
+			<a href="https://github.com/pfltdv">github</a>
+		</div>
+	</footer>
 </body>
 
 </html>
