Implement Console Based Web Site
Signed-off-by: Mustafa Kara <mkara@pinchflat.dev>

--- a/root/index.html
+++ b/root/index.html
@@ -38,36 +38,36 @@
 
 		gtag('config', 'G-HTER2KG6JR');
 	</script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery"></script>
+	<script src="https://cdn.jsdelivr.net/npm/jquery.terminal/js/jquery.terminal.min.js"></script>
+	<script src="https://cdn.jsdelivr.net/npm/figlet/lib/figlet.js"></script>
+	<link href="https://cdn.jsdelivr.net/npm/jquery.terminal/css/jquery.terminal.min.css" rel="stylesheet"/>
+	<script src="script/main.js"></script>
 </head>
 
 <body>
 	<header>
-		<div class="container">
-			<h1>
-				pinchflat.dev <a href="https://github.com/pfltdv"><img src="images/github.png" /></a>
-			</h1>
-		</div>
+		🅿🅸🅽🅲🅷🅵🅻🅰🆃.🅳🅴🆅
 	</header>
-	<div class="project">
-		<a href="https://registry.pinchflat.dev" alt="Anemoi - Container Registry">
-			<img src="images/Sandro_Botticelli__The_Birth_of_Venus_zephyrus-chloris-credit-public-domain.jpg" />
-		</a>
-		<a href="https://registry.pinchflat.dev" alt="Anemoi - Container Registry" class="title">
-			ANEMOI
-		</a>
-		<a href="https://registry.pinchflat.dev" alt="Anemoi - Container Registry" class="description">
-			OCI Compliant Container Registry
-		</a>
-		<a href="https://github.com/pfltdv/anemoi" alt="Anemoi - Container Registry Github" class="github">
-			<img src="images/github.png" />
-		</a>
-	</div>
+	<main>
+		
+	</main>
 	<footer>
-		<div class="container">
-			<a href="mailto:mkara@pinchflat.dev">mkara@pinchflat.dev</a>
-			<a href="https://github.com/pfltdv">github</a>
-		</div>
+		<a href="mailto:info@pinchflat.dev">info@pinchflat.dev</a>
+		<a href="https://github.com/pfltdv">github</a>
 	</footer>
+	<art>
+		<template id="pinchflat">
+			      _            _      __ _       _
+			_ __ (_)_ __   ___| |__  / _| | __ _| |_
+		   | '_ \| | '_ \ / __| '_ \| |_| |/ _` | __|
+		   | |_) | | | | | (__| | | |  _| | (_| | |_
+		   | .__/|_|_| |_|\___|_| |_|_| |_|\__,_|\__|
+		   |_|		
+
+		   Type `help` to see the command list or use your bash instincts
+		</template>
+	</art>
 </body>
 
 </html>
